search gas station function done